@@ -48,7 +48,7 @@ interface Element {
      * If you just want to skip parsing for this element altogether, you can
      * just call $reader->next();
      *
-     * $reader->parseSubTree() will parse the entire sub-tree, and advance to
+     * $reader->parseInnerTree() will parse the entire sub-tree, and advance to
      * the next element.
      *
      * @param Reader $reader
