@@ -71,7 +71,7 @@ class Base implements XML\Element {
      * If you just want to skip parsing for this element altogether, you can
      * just call $reader->next();
      *
-     * $reader->parseSubTree() will parse the entire sub-tree, and advance to
+     * $reader->parseInnerTree() will parse the entire sub-tree, and advance to
      * the next element.
      *
      * @param XML\Reader $reader
@@ -79,7 +79,7 @@ class Base implements XML\Element {
      */
     static public function deserializeXml(XML\Reader $reader) {
 
-        $subTree = $reader->parseSubTree();
+        $subTree = $reader->parseInnerTree();
         return $subTree;
 
     }
