@@ -88,7 +88,7 @@ class KeyValue implements XML\Element {
      * If you just want to skip parsing for this element altogether, you can
      * just call $reader->next();
      *
-     * $reader->parseSubTree() will parse the entire sub-tree, and advance to
+     * $reader->parseInnerTree() will parse the entire sub-tree, and advance to
      * the next element.
      *
      * @param XML\Reader $reader
@@ -114,7 +114,7 @@ class KeyValue implements XML\Element {
                 if ($reader->isEmptyElement) {
                     $values[$clark] = null;
                 } else {
-                    $values[$clark] = $reader->parseSubTree();
+                    $values[$clark] = $reader->parseInnerTree();
                 }
 
             }
